--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button>Send</button>
                 <p class="warning"></p>
             </div>
-            <img src="./img/unknown.png" alt="Picture of weather" class="photo">
+            <img src="" alt="Picture of weather" class="photo">
         </div>
     </div>
     <div class="bottom">
