--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-<script src="./script.js"></script>
+<script type="module" src="apikey.mjs"></script>
+<script type="module" src="script.mjs"></script>
 </body>
 </html>
